Fix this: when a focusable truncated text element received focus, the visible ellipsis disappeared

--- a/src/features/cases/components/ArchitectureFooter.module.css
+++ b/src/features/cases/components/ArchitectureFooter.module.css
@@ -29,6 +29,8 @@
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .footer[data-expanded="true"] {
